# xxlib_simple_cpp

./: .gitignore  CMakeLists.txt  README.md  all.sln  msvc_projs.sln  msvc_tests.sln
client1/: CMakeLists.txt  client.h  client1.vcxproj  main.cpp
gateway_client_cpp/: CMakeLists.txt  client.cpp  client.h  config.h  config.json  coro.cpp  coro.h  coro1.cpp  coro1.h  corolobby.cpp  corolobby.h  coromain.cpp  coromain.h  dialer.cpp  dialer.h  main.cpp  package.h  peer.cpp  peer.h
gateway_client_lua/: CMakeLists.txt  FileExts.bat  FileExts.cs  FileExts_class_lite.ajson.h  FileExts_class_lite.cpp  FileExts_class_lite.h  Objs.bat  Objs.cs  Objs_CppFish.inc  Objs_FishBase.inc  Objs_class_lite.ajson.h  Objs_class_lite.cpp  Objs_class_lite.h  TimeLineConfig.bat  TimeLineConfig.cs  TimeLineConfig_class_lite.cpp  TimeLineConfig_class_lite.h  fish.lua  is_lambda.hpp  main.cpp  main.lua  test1.lua  test2.lua  utils.lua  xx_lua.h  xx_luafunc.h
gateway_server_base/: CMakeLists.txt  aphandler.cpp  aphandler.h  gphandler.cpp  gphandler.h  listener.cpp  main.cpp  peer.cpp  peer.h  phandler.cpp  phandler.h  server.cpp  server.h  sphandler.cpp  sphandler.h
gateway_server_game/: CMakeLists.txt  aphandler.cpp  config.h  config.json  dialer.cpp  dialer.h  glistener.cpp  glistener.h  gpeer.cpp  gpeer.h  listener.h  lpeer.cpp  lpeer.h  main.cpp  peer.cpp  peer.h  phandler.h  server.cpp  server.h
gateway_server_gateway/: CMakeLists.txt  config.h  config.json  cpeer.cpp  cpeer.h  dialer.cpp  dialer.h  listener.cpp  listener.h  main.cpp  peer.cpp  peer.h  pingtimer.cpp  server.cpp  server.h  speer.cpp  speer.h
gateway_server_gateway_kcp/: CMakeLists.txt  cpeer.cpp  cpeer.h  dialer.cpp  dialer.h  kpeer.cpp  kpeer.h  listener.cpp  listener.h  main.cpp  mylog.h  peer.cpp  pingtimer.cpp  pingtimer.h  server.cpp  server.h  speer.cpp  speer.h  tpeer.cpp  tpeer.h
gateway_server_lobby/: CMakeLists.txt  aphandler.cpp  config.h  config.json  glistener.cpp  glistener.h  gpeer.cpp  gpeer.h  gpeer_aphandler.cpp  gpeer_gphandler.cpp  gphandler.h  main.cpp  peer.cpp  peer.h  phandler.cpp  phandler.h  server.cpp  server.h  slistener.cpp  slistener.h  speer.cpp  speer.h  speer_aphandler.cpp  speer_aphandler.h  speer_sphandler.cpp  speer_sphandler.h  sphandler.cpp  vpeer.cpp  vpeer.h
gateway_tools_dialtime/: CMakeLists.txt  config.json  main.cpp
gateway_tools_ping/: CMakeLists.txt  config.h  main.cpp
logger_test/: CMakeLists.txt  main.cpp  xxlog.config
msvc_test1/: CMakeLists.txt  FF_A.inc  FF_CurvePoint.inc  FF_Math.h  FF_Pathway.cpp  FF_Pathway.inc  FF_PathwayMaker.cpp  FF_PathwayMaker.h  FF_PathwayPoint.inc  FF_Point.inc  FF_class_lite.ajson.h  FF_class_lite.cpp  FF_class_lite.h  FF_class_lite.h.inc  FF_class_lite_.h.inc  classes.bat  classes.cs  code.bak  ee.bat  ff.bat  ff.cs  main.cpp  msvc_test1.sln  msvc_test1.vcxproj  msvc_test1.vcxproj.filters
msvc_test2/: CMakeLists.txt  code.bak  main.cpp  msvc_test2.vcxproj  msvc_test2.vcxproj.filters
mysql_test/: CMakeLists.txt  create_db.sql  main.cpp  mysql_test.vcxproj  mysql_test.vcxproj.filters
rust_test1/: Cargo.toml
rust_test1/src/: main.rs
server1/: CMakeLists.txt  config.h  main.cpp  server1.vcxproj  server1_cfg.json  service.h
simple_coroutine_test/: CMakeLists.txt  main.cpp
simple_echo_client/: CMakeLists.txt  client.cpp  client.h  dialer.cpp  dialer.h  header.h  main.cpp  peer.cpp  peer.h
simple_echo_server/: CMakeLists.txt  config.h  header.h  listener.cpp  main.cpp  peer.cpp  peer.h  server.cpp  server.h
simple_echo_server_with_sqlite/: CMakeLists.txt  config.json  listener.cpp  listener.h  main.cpp  peer.cpp  peer.h  server.cpp  server.h
simple_http_server/: CMakeLists.txt  config.h  config.json  hlistener.cpp  hlistener.h  hpeer.cpp  hpeer.h  main.cpp  server.cpp  server.h
simple_kcp_server_with_lua/: CMakeLists.txt  cpeer.cpp  cpeer.h  generator.h  listener.cpp  main.cpp  server.cpp  server.h  xx_coro.h
test1/: CMakeLists.txt  client.cpp  client.h  coro.h  coromain.cpp  coromain.h  listener.cpp  listener.h  main.cpp  peer.cpp  peer.h  resolver.cpp  resolver.h  test1.vcxproj  xx_uv.h  xx_uv_.h
test2/: CMakeLists.txt  PKG_class_lite.cpp  PKG_class_lite.h  _PKG.bat  _PKG.cs  config.h  listener.cpp  listener.h  main.cpp  mylog.h  nanolog.h  peer.cpp  server.cpp  slog.config  slog.h  xx_object.h
test3/: CMakeLists.txt  main.cpp
test4/: CMakeLists.txt  main.cpp
test5/: CMakeLists.txt  main.cpp
test6/: CMakeLists.txt  config.json  main.cpp
test7/: CMakeLists.txt  main.cpp
test7/sol/: stack.hpp
tools_codegen_lib/: Attributes.cs  Filter.cs  TypeHelpers.cs  TypeIdMappings.cs
tools_codegen_src/: GenCPP_Class_Lite.cs  Program.cs  tools_codegen_src.csproj
tools_codegen_src/Properties/: launchSettings.json
xxlib/: ajson.hpp  func_type_traits.h  xx.natvis  xx_asio.h  xx_base.h  xx_chrono.h  xx_coro.h  xx_data.h  xx_data_rw.h  xx_data_view.h  xx_datareader.h  xx_epoll.h  xx_epoll.hpp  xx_epoll_http.h  xx_epoll_kcp.h  xx_epoll_sp.h  xx_file.h  xx_fixeddata.h  xx_fixeddata_w.h  xx_ispod.h  xx_itempool.h  xx_logger.h  xx_looper.h  xx_lua.h  xx_math.h  xx_mysql.h  xx_obj.h  xx_object.h  xx_point.h  xx_ptr.h  xx_ptr_bytes.h  xx_ptr_obj.h  xx_ptr_reader.h  xx_ptr_writer.h  xx_queue.h  xx_randoms.h  xx_scopeguard.h  xx_sharedlist.h  xx_signal.h  xx_sqlite.h  (+7 more)
ztests/test1/: CMakeLists.txt  main.cpp  test1.sln  test1.vcxproj  test1.vcxproj.filters  xx.natvis
